Creation du systÃme de streaming
Ce commit contient:

- Un lecteur de flux audio fonctionnel (ajustement du volume du son non fonctionel)
- Quelques stations de radio de TEST
- Une fonction d'enregistrement du direct fonctionelle

Attention: L'enregistrement du direct est disponible uniquement sur
Google Chrome (Android et PC), Firefox, Opera en raison de la necessitÃ©d'utiliser la MediaRecorder
API qui est une fonctionnalitÃ©experimentale.

Pour plus d'informations sur le support de cette technologie consultez :
https://caniuse.com/#search=MediaRecorder%20API

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -330,6 +330,22 @@ html {
   }
 }
 
+.player-volume-slider {
+  width: 150px
+}
+
+.add-space-to-volume-icon {
+  margin-right: 8px;
+}
+
+.fa-dot-circle-o.interface-icon.orange {
+  color: orange;
+}
+
+.fa-dot-circle-o.interface-icon.red {
+  color: red;
+}
+
 /* Main Page container */
 
 .main-page-container {
@@ -377,10 +393,4 @@ li.radio-app-logo a img {
 .interface-icon {
   color: white;
   font-size: 20px
-}
-
-/* Volume range slider */
-
-.player-volume-slider {
-  width: 150px
 }
