Optimisation du site et amÃliorations CSS
Ce commit rÃsout un bug de dÃfillement dans Microsoft EDGE et IE 11
lorsque la taille de la page est suffisement rÃduite pour necessiter de
faire dÃ©fillerles stations de radio avec la scrollbar. Les logo
passaient sous la barre du lecteur de flux audio.

Les logo sont dÃ©sormais fournis au format WEBP lorsque le navigateur
est compatible et utilise le tag <picture> avec fallback utilisant une
balise <img/> en cas d'incompatibilitÃ de la balise <picture> sur les
navigateurs qui ne la supportent pas.

Ce commit amÃliore le score de performance auditÃ©par les outils pour
dÃ©velolpeurs de Google Chrome jusqu'a 91%.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -351,9 +351,15 @@ html {
 .main-page-container {
   padding-top: 56px;
   overflow: auto;
-  padding-bottom: 56px;
   height: 100vh;
   margin-top: -6px;
+}
+
+.main-page-container:after {
+  height: 56px;
+  width: 100%;
+  content: "";
+  display: block;
 }
 
 /* Radio stations */
@@ -366,10 +372,12 @@ html {
 }
 
 .radio {
-  height: 157px;
-  padding: 10px;
+  height: 150px;
   max-width: 150px;
-  display: block;
+  max-height: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   margin-left: 15px;
   margin-top: 15px;
@@ -387,7 +395,8 @@ li.radio-app-logo a img {
 }
 
 .radio img.radio-logo {
-  max-width: 100%;
+  max-width: 130px;
+  max-height: 130px;
 }
 
 .interface-icon {
