--- a/src/css/style.css
+++ b/src/css/style.css
@@ -348,18 +348,20 @@ html {
 
 /* Main Page container */
 
-.main-page-container {
-  padding-top: 56px;
+.global-container {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  z-index: 9999999;
   overflow: auto;
-  height: 100vh;
-  margin-top: -6px;
 }
 
-.main-page-container:after {
-  height: 56px;
+.main-page-container {
+  min-height: 100%;
+  height: auto !important;
   width: 100%;
-  content: "";
-  display: block;
+  z-index: 2;
+  margin-top: -5px;
 }
 
 /* Radio stations */
@@ -369,6 +371,8 @@ html {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  padding-bottom: 80px;
+  padding-top: 56px;
 }
 
 .radio {
@@ -402,4 +406,43 @@ li.radio-app-logo a img {
 .interface-icon {
   color: white;
   font-size: 20px
+}
+
+/* About */
+.text-container {
+  width: 100%;
+  color: white;
+  background-color: rgba(18, 18, 18, 0.7);
+  background-repeat: repeat;
+  padding-bottom: 56px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.full-size {
+  min-height: 100%;
+  position: absolute;
+}
+
+.about-title-container {
+  padding-bottom: 1.61cm;
+  padding-top: 1.61cm;
+}
+
+/* Scroll Bar */
+::-webkit-scrollbar {
+  width: 10px;
+  margin-right: -0px;
+  z-index: 99999999;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #00e7ef;
+}
+
+::-webkit-scrollbar-track {
+  width: 10px;
+  -webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.1);
+  background-color: rgba(0,0,0,.1);
+  z-index: 99999999;
 }
