--- a/src/css/style.css
+++ b/src/css/style.css
@@ -114,6 +114,7 @@ html {
   background-origin: initial;
   background-clip: initial;
   background-color: rgba(0, 0, 0, 0.8) !important;
+  margin-bottom: 5px;
 }
 
 .vertical-menu-toggle:hover {
@@ -358,6 +359,7 @@ html {
   width: 100%;
   z-index: 9999999;
   overflow: auto;
+  margin-top: -6px;
 }
 
 .main-page-container {
